<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/red_button_bg"
    tools:context=".LoginActivity">

    <LinearLayout
        android:padding="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginTop="-20dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginBottom="1dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/img1"
                />


        </LinearLayout>

        <EditText
            android:textColor="@android:color/white"
            android:id="@+id/input_username"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/prompt_email" />

        <EditText
            android:textColor="@android:color/white"
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/prompt_password" />

        <Button
            android:textAllCaps="false"
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:background="@drawable/signin_btn"
            android:textColor="@color/primary"
            android:text="@string/action_sign_in_short" />

        <Button
            android:textAllCaps="false"
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textColor="@android:color/white"
            android:background="@drawable/transparent_black_ten_percent"
            android:text="@string/register" />

        <Button
            android:textAllCaps="false"
            android:id="@+id/button_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textColor="@android:color/white"
            android:background="@drawable/transparent_black_ten_percent"
            android:text="@string/forgotpass" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>